# dataset-ec2-load-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.org  dagger.json  hf_proof.py  main.py  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/dataset_ec_2_load_benchmarks/: __init__.py  main.py
docs/: README.md  dataset_load_benchmarks_project_presentation.html  dataset_load_benchmarks_project_presentation.org  datasets_disk_usage_cossts_estimate_aws.csv
infrastructure/ec2/: backend.data.conf  ec2.tf  main.tf  variables.tf
scripts/: adapt_annotation_samples_path.py  file_dataset_to_df.py  file_dataset_to_sharded_df_parallel.py  file_dataset_to_webdataset.py  image_file_dataset_to_sharded_df_parallel.py  sync_data_s3.sh
src/: dataset_load_benchmark.py  file_loader.py  timer.py  ubiquitous_datasets.py
src/local_dataset/: local_df_dataset.py  local_fs_dataset.py
src/s3_files_dataset/: s3_fs_dataset.py
src/s3_parquet_dataset/: s3_async_df_dataset.py  s3_df_dataset.py
