[project]
name = "dataset-ec2-load-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "boto3>=1.38.40",
    "datasets>=4.0.0",
    "memory-profiler>=0.61.0",
    "polars>=1.30.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.0",
    "rich>=14.1.0",
    "s3fs>=0.4.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
